[pycodestyle]
max-line-length=100
ignore = E203,W503

[tool:pytest]
addopts = --cov-report term-missing --cov musicaiz --cov-report=xml --disable-pytest-warnings --mpl --mpl-baseline-path=tests/baseline_images/test_display
xfail_strict = true

[metadata]
name = musicaiz
version = attr: musicaiz.version.__version__
description = A python framework for symbolic music generation, evaluation and analysis
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://carlosholivan.github.io/musicaiz
author = Carlos Hernandez-Olivan
author_email = carlosher@unizar.es
license = ISC
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation = https://carlosholivan.github.io/musicaiz/docs
    Download = https://github.com/carlosholivan/musicaiz/releases
    Source = https://github.com/carlosholivan/musicaiz
    Tracker = https://github.com/carlosholivan/musicaiz/issues
    #Discussion forum = https://groups.google.com/g/musicaiz
classifiers = 
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Framework :: Matplotlib
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires =
    pretty_midi==0.2.9
    numpy>=1.23.5,<2.0.0  # Updated from 1.22.0; 1.23.5 supports Python 3.11
    pandas>=1.5.3,<2.0.0  # Updated from 1.4.4; 1.5.3 supports Python 3.11
    pytest>=7.0.0,<8.0.0  # Updated from 6.2.4
    matplotlib>=3.6.0,<4.0.0  # Updated from 3.4.3
    plotly>=5.10.0,<6.0.0  # Updated from 5.8.0
    mypy>=1.0.0,<2.0.0  # Updated from 0.960
    seaborn>=0.12.0,<0.13.0  # Updated from 0.11.2
    pre-commit>=2.20.0,<3.0.0  # Updated from 2.19.0
    tqdm>=4.65.0,<5.0.0  # Updated from 4.64.0
    networkx>=2.8.8,<3.0.0  # Updated from 2.8.6
    sklearn==0.0  # Kept as is (wrapper for scikit-learn)
    gradio>=3.16.0,<4.0.0  # Updated from 3.0.15
    torchsummary==1.5.1  # Kept; doesn’t strictly need torch
    prettytable>=3.5.0,<4.0.0  # Updated from 3.3.0
    protobuf>=4.21.9,<5.0.0  # Updated from 4.21.3
    rich>=12.6.0,<13.0.0  # Kept as is
    ruptures>=1.1.7,<2.0.0  # Kept as is
python_requires >=3.8

[options.extras_require]
docs =
    sphinx_rtd_theme==0.5.*
    sphinx-design==0.1.0
    sphinx_panels==0.6.0
    nbsphinx==0.8.8
    sphinx != 1.3.1
    numpydoc==1.1.0
    matplotlib >= 3.3.0
    sphinx-multiversion >= 0.2.3
    sphinx-gallery >= 0.7
    ipython >= 7.0
    sphinxcontrib-svg2pdfconverter
    presets
    sphinx_book_theme==0.3.2
    nbconvert
tests =
    pytest-mpl
    pytest-cov
    pytest
display =
    matplotlib >= 3.3.0
